# task_h

./: FAILURE_CLASSES_REPORT.md  README.md  pyproject.toml
config/: failure_classes.json
failure_log/: exceptions.py  failure_classes.py  models.py  store.py  substrate.py
scripts/: check_static_analysis.py
tests/: conftest.py  test_aggregation.py  test_append_only.py  test_cascade.py  test_query.py  test_schema_rejection.py  test_static_analysis.py
tests/fixtures/: bypass_violation_sample.py
